# VTApi library
add_subdirectory(vtapi)

# SQLite and PostgreSQL backends
add_subdirectory(vtapi_backends)

# example VTApi modules
add_subdirectory(vtapi_modules)

# VTCLi command line tool
add_subdirectory(vtcli)

# VTModule module loader
add_subdirectory(vtmodule)

# VTServer service
add_subdirectory(vtserver)

